# openlmi-networking

./: Makefile  README.md  openlmi-networking-0.2.2-bond-allow-to-change-bond-device-name.patch  openlmi-networking-0.2.2-fix-assoc-between-device-and-bridging-setting.patch  openlmi-networking-0.2.2-fix-ipv6type-property-of-LMI_IPAssignmentSettingData.patch  openlmi-networking-0.2.2-make-enslave-setting-caption-unique.patch  openlmi-networking-0.2.2-react-to-ip-configuration-change.patch  openlmi-networking-0.2.2-support-for-specifying-port-by-name.patch  openlmi-networking-0.3.0-fix-bond-deactivation.patch  openlmi-networking-0.3.0-fix-creation-of-network-bridges.patch  openlmi-networking.spec
src/: .gitignore  .reviewboardrc  CMakeLists.txt  README  make-release.sh  make-rpm.sh  openlmi-networking.spec
src/doc/admin/: CMakeLists.txt  conf.py  usage.rst
src/doc/admin/mof/: CMakeLists.txt
src/doc/admin/pic/: CMakeLists.txt  intro-current.uml  intro-hardware.uml  intro-setting.uml  make-svg.sh
src/mof/: 60_LMI_Networking.mof  70_LMI_NetworkingIndicationFilters.mof  90_LMI_Networking_Profile.mof  CMakeLists.txt
src/src/: CMakeLists.txt  DSP1035.mof.skel  DSP1036.mof.skel  DSP1116.mof.skel  LMI_AffectedNetworkJobElementProvider.c  LMI_BindsToLANEndpointProvider.c  LMI_BondingMasterSettingDataProvider.c  LMI_BondingSlaveSettingDataProvider.c  LMI_BridgingMasterSettingDataProvider.c  LMI_BridgingSlaveSettingDataProvider.c  LMI_DHCPSettingDataProvider.c  LMI_DNSProtocolEndpointProvider.c  LMI_DNSSettingDataProvider.c  LMI_EndpointForIPNetworkConnectionProvider.c  LMI_EndpointIdentityProvider.c  LMI_EthernetPortProvider.c  LMI_EthernetPortStatisticsProvider.c  LMI_ExtendedStaticIPAssignmentSettingDataProvider.c  LMI_HostedIPConfigurationServiceProvider.c  LMI_IPAssignmentSettingDataProvider.c  LMI_IPConfigurationServiceAffectsElementProvider.c  LMI_IPConfigurationServiceProvider.c  LMI_IPElementSettingDataProvider.c  LMI_IPNetworkConnectionCapabilitiesProvider.c  LMI_IPNetworkConnectionElementCapabilitiesProvider.c  LMI_IPNetworkConnectionProvider.c  LMI_IPProtocolEndpointProvider.c  LMI_IPRouteSettingDataProvider.c  LMI_IPVersionElementSettingDataProvider.c  LMI_IPVersionSettingDataProvider.c  LMI_LAGPort8023adProvider.c  LMI_LANEndpointProvider.c  LMI_LinkAggregationBindsToProvider.c  LMI_LinkAggregationConcreteIdentityProvider.c  LMI_LinkAggregator8023adProvider.c  LMI_NetworkDeviceSAPImplementationProvider.c  LMI_NetworkElementCapabilitiesProvider.c  LMI_NetworkEnabledLogicalElementCapabilitiesProvider.c  LMI_NetworkHostedAccessPointProvider.c  LMI_NetworkInstCreationProvider.c  (+61 more)
src/src/unittest/: CMakeLists.txt  mock_nm.c  mock_nm.h  test.c  test.h  test_activeconnection.c  test_activeconnection.h  test_connection.c  test_connection.h  test_dbus.c  test_dbus.h  test_globals.c  test_globals.h  test_network.c  test_network.h  test_port.c  test_port.h  test_setting.c  test_setting.h
src/test/: fake_cimom.py  fake_nm.py  objects.json  run_tests.py  test_apply_connection.py  test_base.py  test_bonding.py  test_bridging.py  test_create_destroy_connection.py  test_enable_disable_iface.py  test_indications.py  test_jobs.py  test_modify_connection.py  test_objects.py  test_smash_conformance.py
